2020-09-28 Wiley E. Hill <wileyhill@gmail.com>

    * src/struct/s_place.c: Add function geda_struct_place_append_place_list.

2020-09-23 Wiley E. Hill <wileyhill@gmail.com>

    * src/geda/geda_line.c: Revise goofy calculation of expansion in
      geda_line_bounds.

2020-09-01 Wiley E. Hill <wileyhill@gmail.com>

    * tests/test_arc_object.c: Reorganize checks with NULL object in
      check_query, revise get_position error output message and add
      check for geda_arc_object_get_position with NULL X-Y pointers.
      Revise For loops in check_transformer and check_query to use
      intermediate fail counter and output the conditions when
      failures occur. Check geda_arc_object_get_position with only
      one X-Y pointer.

2020-08-28 Wiley E. Hill <wileyhill@gmail.com>

    * data/Makefile.am: Redirect error output from update-mime-database
      to null to suppress pesky "not in the search path" message.

    * src/object/o_get.c: Simplify geda_object_get_position return.

    * src/object/o_set.c: Revise geda_set_object_color to output an error
      message if the given color index is invalid.

    * tests/test_box_object.c: Relocate geda_box_object_get_position check
      with NULL object to check_query for consistency with other test
      modules and to not check NULL in random For loop.

    * tests/test_object_list.c: Fix the check for geda_object_list_set_color;
      restrict random color to MAX_COLORS - 1.

2020-08-19 Wiley E. Hill <wileyhill@gmail.com>

    * libgeda/include/libgeda_priv.h: Reorganize header; update sequence
      of functions.

    * src/object/o_*_object.c: Only set value if a pointer was passed to
      _get_position function:

          * src/object/o_arc_object.c
          * src/object/o_box_object.c
          * src/object/o_picture_object.c
          * src/object/o_pin_object.c

    * src/object/o_*_object.c: Reorganize module; alphabetize functions:

          * src/object/o_complex_object.c